--- a/force-app/main/default/classes/CreateGoogleDoc.cls
+++ b/force-app/main/default/classes/CreateGoogleDoc.cls
@@ -14,7 +14,7 @@ public with sharing class CreateGoogleDoc {
             request.setHeader('Authorization','Bearer '+authProvider.access_token__c);
             Http http = new Http();
             HttpResponse response = http.send(request);
-            // System.debug('Response ==>'+response.getBody());
+            System.debug('Response ==>'+response.getBody());
             return response.getBody();
         } catch (Exception e) {
             System.debug('Error In get Docs ==> '+e.getMessage());
@@ -22,395 +22,7 @@ public with sharing class CreateGoogleDoc {
         }
     }
 
-    public static string modifyContent(String originalContent,String placeholder,String newValue){
-        return originalContent.replace(placeholder,newValue);
-    }
-
-    public static string createNewDoc(String title) {
-        System.debug('Create new doc');
-        try {
-            String endpoint = 'https://docs.googleapis.com/v1/documents';
-            AuthProviderSettings__c authProvider = AuthProviderSettings__c.getInstance();
-            Map<String, Object> requestBody = new Map<String, Object>();
-
-            requestBody.put('title', title);
-
-            String jsonBody = JSON.serialize(requestBody);
-            HttpRequest request = new HttpRequest();
-            request.setEndpoint(endpoint);
-            request.setMethod('POST');
-            request.setHeader('Authorization','Bearer '+authProvider.access_token__c);
-            request.setHeader('Content-Type', 'application/json');
-            request.setBody(jsonBody);
-
-            Http http = new Http();
-            HttpResponse response = http.send(request);
-            System.debug('Response of create doc==>'+response);
-            System.debug('Response body=>'+response.getBody());
-            Map<String, Object> responseMap = (Map<String, Object>)JSON.deserializeUntyped(response.getBody());
-            return String.valueOf(responseMap.get('documentId'));
-        }
-        catch(Exception e){
-            System.debug('Error in create doc ==> '+e.getMessage());
-            return null;
-        }
-    }
-
-  
-
-    // public static void main() {
-    //     // String docId = createNewDoc('Check merge fields');
-    //     String sourceDocContent = getDocument('1Dga4sbG65SM8dDbEiA3yRfvTeGXmafOlb2J9B_Goy2Q');
-    //     String modifiedHTML = sourceDocContent;
-    //     modifiedHTML = KeyMappingController.mappingObjFieldsData(modifiedHTML, '001H4000008UpuCIAS', 'Account');
-    //     modifiedHTML = KeyMappingController.mappingGeneralFieldData(modifiedHTML);
-    //     modifiedHTML = KeyMappingController.mappingMergeTemplate(modifiedHTML);
-    //     sourceDocContent = modifiedHTML;
-
-    //     List<Object> bodyContent = (List<Object>) ((Map<String,Object>)JSON.deserializeUntyped(JSON.serialize(((Map<String,Object>) JSON.deserializeUntyped(sourceDocContent)).get('body')))).get('content');
-      
-    //     Map<String,Object> inlineObjects = (Map<String,Object>) ((Map<String,Object>) JSON.deserializeUntyped(sourceDocContent)).get('inlineObjects');
-    //     Map<String,Object> positionedObjects = (Map<String,Object>) ((Map<String,Object>) JSON.deserializeUntyped(sourceDocContent)).get('positionedObjects');
-       
-    //     List<Object> requests = formatContentForBatchUpdate(bodyContent,inlineObjects,positionedObjects);
-        
-    //     CreateGoogleDoc.updateDoc('1Dga4sbG65SM8dDbEiA3yRfvTeGXmafOlb2J9B_Goy2Q',sourceDocContent,requests);
-    //     // CreateGoogleDoc.updateDoc(docId,sourceDocContent,requests);
-    //     // getPDF(docId);
-    //     // deleteDoc(docId);
-    // }
-
-    // original     
-    // public static List<Object> formatContentForBatchUpdate(List<Object> bodyContent, Map<String, Object> inlineObjects, Map<String, Object> positionedObjects) {
-        
-    //     List<Object> requests = new List<Object>();
-    //     Integer currentIndex = 1;
-
-    //     for (Object element : bodyContent) {
-    //         Map<String, Object> elementMap = (Map<String, Object>) element;
-            
-    //         if (elementMap.containsKey('paragraph')) {
-    //             Map<String, Object> paragraph = (Map<String, Object>) elementMap.get('paragraph');
-    //             List<Object> elements = (List<Object>) paragraph.get('elements');
-
-    //             for (Object el : elements) {
-    //                 Map<String, Object> elMap = (Map<String, Object>) el;
-    //                 if (elMap.containsKey('textRun')) {
-    //                     Map<String, Object> textRun = (Map<String, Object>) elMap.get('textRun');
-    //                     if (textRun != null) {
-    //                         String text = (String) textRun.get('content');
-    //                         Map<String, Object> textStyle = (Map<String, Object>) textRun.get('textStyle');
-
-    //                         Map<String, Object> insertTextRequest = new Map<String, Object>{
-    //                             'insertText' => new Map<String, Object>{
-    //                                 'location' => new Map<String, Object>{
-    //                                     'index' => currentIndex
-    //                                 },
-    //                                 'text' => text
-    //                             }
-    //                         };
-
-    //                         requests.add(insertTextRequest);
-
-    //                         if (textStyle != null) {
-    //                             Map<String, Object> updateTextStyleRequest = new Map<String, Object>{
-    //                                 'updateTextStyle' => new Map<String, Object>{
-    //                                     'range' => new Map<String, Object>{
-    //                                         'startIndex' => currentIndex,
-    //                                         'endIndex' => currentIndex + text.length()
-    //                                     },
-    //                                     'textStyle' => textStyle,
-    //                                     'fields' => '*'
-    //                                 }
-    //                             };
-
-    //                             requests.add(updateTextStyleRequest);
-    //                         }
-
-    //                         currentIndex += text.length();
-    //                     }
-    //                 } else if (elMap.containsKey('inlineObjectElement')) {
-                        
-    //                     String inlineObjectId = (String) ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(elMap.get('inlineObjectElement')))).get('inlineObjectId');
-    //                     if (inlineObjects.containsKey(inlineObjectId)) {
-    //                         Map<String, Object> inlineObject = (Map<String, Object>) inlineObjects.get(inlineObjectId);
-                           
-    //                         String imageUrl = (String) ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(inlineObject.get('embeddedObject')))).get('contentUri');
-    //                         // System.debug('Image URL==>'+imageUrl);
-                            
-    //                         Map<String, Object> insertInlineImageRequest = new Map<String, Object>{
-    //                             'insertInlineImage' => new Map<String, Object>{
-    //                                 'location' => new Map<String, Object>{
-    //                                     'index' => currentIndex
-    //                                 },
-    //                                 'uri' => imageUrl,
-    //                                 'objectSize' => new Map<String, Object>{
-                                       
-    //                                     'height' => ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(inlineObject.get('embeddedObject')))).get('size')))).get('height'),
-                                      
-    //                                     'width' => ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(inlineObject.get('embeddedObject')))).get('size')))).get('width')
-    //                                 }
-    //                             }
-    //                         };
-                            
-    //                         requests.add(insertInlineImageRequest);
-    //                         currentIndex += 1; // Move the index forward
-    //                     }
-    //                 }
-    //             }
-
-
-    //             // Handle positioned objects in the paragraph
-    //             if (paragraph.containsKey('positionedObjectIds')) {
-                  
-    //                 List<Object> positionedObjectIdsObject = (List<Object>) paragraph.get('positionedObjectIds');
-    //                 List<String> positionedObjectIds = new List<String>();
-                    
-    //                 for(object positionedObjectId : positionedObjectIdsObject){
-    //                     string po = String.valueOf(positionedObjectId);
-    //                     positionedObjectIds.add(po);
-
-    //                 }
-    //                 for (String positionedObjectId : positionedObjectIds) {
-    //                     if (positionedObjects.containsKey(positionedObjectId)) {
-    //                         Map<String, Object> positionedObject = (Map<String, Object>) positionedObjects.get(positionedObjectId);
-                            
-    //                         // Object positionedObjectProperties = positionedObject.get('positionedObjectProperties');
-    //                         Map<String, Object> positionedObjectProperties =(Map<String, Object>) positionedObject.get('positionedObjectProperties');
-    //                         Object embeddedObject =  ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(positionedObjectProperties))).get('embeddedObject');
-    //                         Object imageProperties =  ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(embeddedObject))).get('imageProperties');
-    //                         String imageUrl = (String)  ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(imageProperties))).get('contentUri');
-    //                         Map<String, Object> size =  (Map<String, Object>)  ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(embeddedObject))).get('size');
-
-
-    //                         Map<String, Object> insertPositionedImageRequest = new Map<String, Object>{
-    //                             'insertInlineImage' => new Map<String, Object>{
-    //                             // 'insertPositionedObject' => new Map<String, Object>{
-    //                                 'location' => new Map<String, Object>{
-    //                                     'index' => currentIndex
-    //                                 },
-    //                                 'uri' => imageUrl,
-    //                                 'objectSize' => new Map<String, Object>{
-                                        
-    //                                     'height' => size.get('height'),
-    //                                     'width' => size.get('width')
-                                        
-    //                                 }
-    //                                 // 'positionedObjectProperties' => positionedObject.get('positionedObjectProperties')
-                                    
-    //                             }
-    //                         };
-    //                         requests.add(insertPositionedImageRequest);
-                            
-    //                         currentIndex += 1; // Move the index forward
-                            
-
-                            
-    //                     }
-
-                        
-    //                 }
-    //             }
-    //         } else if (elementMap.containsKey('positionedObjectElement')) {
-                
-               
-    //             String positionedObjectId = (String) ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(elementMap.get('positionedObjectElement')))).get('positionedObjectId');
-    //             if (positionedObjects.containsKey(positionedObjectId)) {
-    //                 Map<String, Object> positionedObject = (Map<String, Object>) positionedObjects.get(positionedObjectId);
-                    
-    //                 String imageUrl = (String) ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(positionedObject.get('embeddedObject')))).get('imageProperties')))).get('contentUri');
-                    
-                    
-                    
-    //                 Map<String, Object> insertPositionedImageRequest = new Map<String, Object>{
-    //                     'insertPositionedImage' => new Map<String, Object>{
-    //                         'location' => new Map<String, Object>{
-    //                             'index' => currentIndex
-    //                         },
-    //                         'uri' => imageUrl,
-    //                         'objectSize' => new Map<String, Object>{
-
-    //                             'height' => ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(positionedObject.get('embeddedObject')))).get('size')))).get('height'),
-
-    //                             'width' => ((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(((Map<String,Object>) JSON.deserializeUntyped(JSON.serialize(positionedObject.get('embeddedObject')))).get('size')))).get('width')
-    //                         },
-    //                         'positionedObjectProperties' => positionedObject.get('positionedObjectProperties')
-    //                     }
-    //                 };
-
-    //                 requests.add(insertPositionedImageRequest);
-    //                 currentIndex += 1; 
-    //             }
-    //         }
-    //     }
-
-    //     return requests;
-    // }
-
-    // chatgpt
-    // public static List<Object> formatContentForBatchUpdate(List<Object> bodyContent, Map<String, Object> inlineObjects, Map<String, Object> positionedObjects) {
-    //     List<Object> requests = new List<Object>();
-    //     Integer currentIndex = 1;
-    
-    //     for (Object element : bodyContent) {
-    //         Map<String, Object> elementMap = (Map<String, Object>) element;
-            
-    //         if (elementMap.containsKey('paragraph')) {
-    //             Map<String, Object> paragraph = (Map<String, Object>) elementMap.get('paragraph');
-    //             List<Object> elements = (List<Object>) paragraph.get('elements');
-    
-    //             for (Object el : elements) {
-    //                 Map<String, Object> elMap = (Map<String, Object>) el;
-    //                 if (elMap.containsKey('textRun')) {
-    //                     Map<String, Object> textRun = (Map<String, Object>) elMap.get('textRun');
-    //                     if (textRun != null) {
-    //                         String text = (String) textRun.get('content');
-    //                         Map<String, Object> textStyle = (Map<String, Object>) textRun.get('textStyle');
-    
-    //                         Map<String, Object> insertTextRequest = new Map<String, Object>{
-    //                             'insertText' => new Map<String, Object>{
-    //                                 'location' => new Map<String, Object>{
-    //                                     'index' => currentIndex
-    //                                 },
-    //                                 'text' => text
-    //                             }
-    //                         };
-    
-    //                         requests.add(insertTextRequest);
-    
-    //                         if (textStyle != null) {
-    //                             Map<String, Object> updateTextStyleRequest = new Map<String, Object>{
-    //                                 'updateTextStyle' => new Map<String, Object>{
-    //                                     'range' => new Map<String, Object>{
-    //                                         'startIndex' => currentIndex,
-    //                                         'endIndex' => currentIndex + text.length()
-    //                                     },
-    //                                     'textStyle' => textStyle,
-    //                                     'fields' => '*'
-    //                                 }
-    //                             };
-    
-    //                             requests.add(updateTextStyleRequest);
-    //                         }
-    
-    //                         currentIndex += text.length();
-    //                     }
-    //                 } //else if (elMap.containsKey('inlineObjectElement')) {
-    //                 //     String inlineObjectId = (String) ((Map<String, Object>) JSON.deserializeUntyped(JSON.serialize(elMap.get('inlineObjectElement')))).get('inlineObjectId');
-    //                 //     if (inlineObjects.containsKey(inlineObjectId)) {
-    //                 //         Map<String, Object> inlineObject = (Map<String, Object>) inlineObjects.get(inlineObjectId);
-                            
-    //                 //         String imageUrl = (String) ((Map<String, Object>) JSON.deserializeUntyped(JSON.serialize(inlineObject.get('embeddedObject')))).get('contentUri');
-                            
-    //                 //         Map<String, Object> size = (Map<String, Object>) ((Map<String, Object>) JSON.deserializeUntyped(JSON.serialize(inlineObject.get('embeddedObject')))).get('size');
-                            
-    //                 //         Map<String, Object> insertInlineImageRequest = new Map<String, Object>{
-    //                 //             'insertInlineImage' => new Map<String, Object>{
-    //                 //                 'location' => new Map<String, Object>{
-    //                 //                     'index' => currentIndex
-    //                 //                 },
-    //                 //                 'uri' => imageUrl,
-    //                 //                 'objectSize' => new Map<String, Object>{
-    //                 //                     'height' => size.get('height'),
-    //                 //                     'width' => size.get('width')
-    //                 //                 }
-    //                 //             }
-    //                 //         };
-    
-    //                 //         requests.add(insertInlineImageRequest);
-                            
-    //                 //         currentIndex += 1; // Move the index forward
-    //                 //     }
-    //                 // }
-    //             }
-    
-    //             // Handle positioned objects in the paragraph
-    //             // if (paragraph.containsKey('positionedObjectIds')) {
-    //             //     List<Object> positionedObjectIdsObject = (List<Object>) paragraph.get('positionedObjectIds');
-    //             //     List<String> positionedObjectIds = new List<String>();
-    
-    //             //     for (Object positionedObjectId : positionedObjectIdsObject) {
-    //             //         String po = String.valueOf(positionedObjectId);
-    //             //         positionedObjectIds.add(po);
-    //             //     }
-    //             //     for (String positionedObjectId : positionedObjectIds) {
-    //             //         if (positionedObjects.containsKey(positionedObjectId)) {
-    //             //             Map<String, Object> positionedObject = (Map<String, Object>) positionedObjects.get(positionedObjectId);
-                            
-    //             //             Map<String, Object> positionedObjectProperties = (Map<String, Object>) positionedObject.get('positionedObjectProperties');
-    //             //             Map<String, Object> embeddedObject = (Map<String, Object>) positionedObjectProperties.get('embeddedObject');
-    //             //             Map<String, Object> imageProperties = (Map<String, Object>) embeddedObject.get('imageProperties');
-    //             //             String imageUrl = (String) imageProperties.get('contentUri');
-    //             //             Map<String, Object> size = (Map<String, Object>) embeddedObject.get('size');
-    
-    //             //             Map<String, Object> insertInlineImageRequest = new Map<String, Object>{
-    //             //                 'insertInlineImage' => new Map<String, Object>{
-    //             //                     'location' => new Map<String, Object>{
-    //             //                         'index' => currentIndex
-    //             //                     },
-    //             //                     'uri' => imageUrl,
-    //             //                     'objectSize' => new Map<String, Object>{
-    //             //                         'height' => size.get('height'),
-    //             //                         'width' => size.get('width')
-    //             //                     }
-    //             //                 }
-    //             //             };
-    
-    //             //             requests.add(insertInlineImageRequest);
-    
-    //             //             // Add update paragraph style to wrap text around the image
-    //             //             Map<String, Object> updateParagraphStyleRequest = new Map<String, Object>{
-    //             //                 'updateParagraphStyle' => new Map<String, Object>{
-    //             //                     'range' => new Map<String, Object>{
-    //             //                         'startIndex' => currentIndex - 1,  // Positioning the previously inserted inline image
-    //             //                         'endIndex' => currentIndex
-    //             //                     },
-    //             //                     'paragraphStyle' => new Map<String, Object>{
-    //             //                         'alignment' => 'CENTER'  // Example alignment, change as needed
-    //             //                     },
-    //             //                     'fields' => 'alignment'
-    //             //                 }
-    //             //             };
-    //             //             requests.add(updateParagraphStyleRequest);
-    
-    //             //             currentIndex += 1; // Move the index forward
-    //             //         }
-    //             //     }
-    //             // }
-    //         } //else if (elementMap.containsKey('positionedObjectElement')) {
-    //         //     String positionedObjectId = (String) ((Map<String, Object>) JSON.deserializeUntyped(JSON.serialize(elementMap.get('positionedObjectElement')))).get('positionedObjectId');
-    //         //     if (positionedObjects.containsKey(positionedObjectId)) {
-    //         //         Map<String, Object> positionedObject = (Map<String, Object>) positionedObjects.get(positionedObjectId);
-                    
-    //         //         String imageUrl = (String) ((Map<String, Object>) JSON.deserializeUntyped(JSON.serialize(((Map<String, Object>) JSON.deserializeUntyped(JSON.serialize(positionedObject.get('embeddedObject')))).get('imageProperties')))).get('contentUri');
-    //         //         Map<String, Object> size = (Map<String, Object>) ((Map<String, Object>) JSON.deserializeUntyped(JSON.serialize(positionedObject.get('embeddedObject')))).get('size');
-                    
-    //         //         Map<String, Object> insertInlineImageRequest = new Map<String, Object>{
-    //         //             'insertInlineImage' => new Map<String, Object>{
-    //         //                 'location' => new Map<String, Object>{
-    //         //                     'index' => currentIndex
-    //         //                 },
-    //         //                 'uri' => imageUrl,
-    //         //                 'objectSize' => new Map<String, Object>{
-    //         //                     'height' => size.get('height'),
-    //         //                     'width' => size.get('width')
-    //         //                 }
-    //         //             }
-    //         //         };
-    
-    //         //         requests.add(insertInlineImageRequest);
-    //         //         currentIndex += 1;
-    //         //     }
-    //         // }
-    //     }
-    
-    //     return requests;
-    // }
-    
-    
-    
-
-    public static void getPDF(String googleDocId) {
+    public static Attachment getPDF(String googleDocId) {
         String endpoint = 'https://www.googleapis.com/drive/v3/files/'+googleDocId+'/export';
         AuthProviderSettings__c authProvider = AuthProviderSettings__c.getInstance();
 
@@ -435,8 +47,10 @@ public with sharing class CreateGoogleDoc {
         System.debug('Body of pdf=>'+response.getBody());
         if (response.getStatusCode() == 200) {
             Attachment attachment = new Attachment(Name='Google.pdf',ParentId='003H4000006wabAIAQ',Body=response.getBodyAsBlob(),ContentType='application/pdf');
-            insert attachment;
+            // insert attachment;
+            return attachment;
         } 
+        return null;
     }
 
     public static void deleteDoc(String googleDocId) {
@@ -472,7 +86,7 @@ public with sharing class CreateGoogleDoc {
             AuthProviderSettings__c authProvider = AuthProviderSettings__c.getInstance();
             Map<String, Object> requestBody = new Map<String, Object>();
 
-            requestBody.put('name', 'CopyGoogleDOC');
+            requestBody.put('name', 'CopyOf'+googleDocId);
 
             String jsonBody = JSON.serialize(requestBody);
             HttpRequest request = new HttpRequest();
@@ -524,62 +138,19 @@ public with sharing class CreateGoogleDoc {
         modifiedHTML = KeyMappingController.mappingMergeTemplate(modifiedHTML);
         
          
-
         List<Object> bodyContentNew = (List<Object>) ((Map<String,Object>)JSON.deserializeUntyped(JSON.serialize(((Map<String,Object>) JSON.deserializeUntyped(modifiedHTML)).get('body')))).get('content');
         List<Object> bodyContentOriginal = (List<Object>) ((Map<String,Object>)JSON.deserializeUntyped(JSON.serialize(((Map<String,Object>) JSON.deserializeUntyped(sourceDocContent)).get('body')))).get('content');
       
-        
-       
         List<Object> requests = formatContentForBatchUpdate(bodyContentNew,bodyContentOriginal);
         
         CreateGoogleDoc.updateDoc(newDocId,requests);
 
-        getPDF(newDocId);
-        // deleteDoc();
+        Attachment attachment = getPDF(newDocId);
+        deleteDoc(newDocId);
+        insert attachment;
     }
 
-    // public static List<Object> formatContentForBatchUpdate(List<Object> bodyContentNew,List<Object> bodyContentOriginal) {
-    //     List<Object> requests = new List<Object>();
     
-    //     for (Object element : bodyContentNew) {
-    //         Map<String, Object> elementMap = (Map<String, Object>) element;
-    
-    //         if (elementMap.containsKey('paragraph')) {
-    //             Map<String, Object> paragraph = (Map<String, Object>) elementMap.get('paragraph');
-    //             List<Object> elements = (List<Object>) paragraph.get('elements');
-    
-    //             for (Object el : elements) {
-    //                 Map<String, Object> elMap = (Map<String, Object>) el;
-    //                 if (elMap.containsKey('textRun')) {
-    //                     Map<String, Object> textRun = (Map<String, Object>) elMap.get('textRun');
-    //                     if (textRun != null) {
-    //                         String text = (String) textRun.get('content');
-    //                         // System.debug('Text =>'+text);
-    //                         Map<String, Object> textStyle = (Map<String, Object>) textRun.get('textStyle');
-    
-    //                         // Create a replaceAllText request to replace the text
-    //                         Map<String, Object> replaceAllTextRequest = new Map<String, Object>{
-    //                             'replaceAllText' => new Map<String, Object>{
-    //                                 'containsText' => new Map<String, Object>{
-    //                                     'text' => text,
-    //                                     // 'text' => '{{#Name}}',
-    //                                     'matchCase' => true
-    //                                 },
-    //                                 'replaceText' => text
-    //                                 // 'replaceText' => 'Pratham'
-    //                             }
-    //                         };
-    
-    //                         requests.add(replaceAllTextRequest);
-                           
-    //                     }
-    //                 }
-    //             }
-    //         }
-    //     }
-    
-    //     return requests;
-    // }
         
     public static List<Object> formatContentForBatchUpdate(List<Object> bodyContentNew, List<Object> bodyContentOriginal) {
         List<Object> requests = new List<Object>();
@@ -628,7 +199,7 @@ public with sharing class CreateGoogleDoc {
                     }
                 }
             }
-    
+            
             originalIndex++;
         }
     
